<resources>
    <string name="app_name">FoundDemo</string>
    <string name="new_group">New Group</string>
    <string name="new_secret_chat">New Secret Chat</string>
    <string name="new_channel">New Channel</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="login_out">Login Out</string>
</resources>
